IMS-47 & IMS-50: Redux and some Ui fixes

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <link
+      rel="icon"
+      href="/public/images/blood-donation-application-logo.png"
+    />
+    <title>Blood Donation Application</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
